[package]
name = "keepsynced"
version = "0.1.0"
authors = ["andersonjuan <andersonjuanc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
rusoto_core = "0.45.0"
rusoto_sqs = "0.45.0"
rusoto_s3 = "0.45.0"
